--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ $(document).ready(function(){
     </script>
 
     <div class="container">
-      <audio src="./mp3/a.mp3" id="song"></audio>
+      <audio src="a.mp3" id="song"></audio>
             <script>
               function Music(){
                 window.addEventListener('click', () => {
